src/scss/components/_video.scss
$width: 70vw;
$ratio: 16 / 9;
$height: $width / $ratio;

.video-btn {
  position: absolute;
  z-index: 2;
  top: -60px;
  left: 0;

  opacity: .5;
  width: 70px;
  transition: opacity .3s;

  &:hover {
    cursor: pointer;
    opacity: 1;
  }

  img {
    width: 100%;
  }
}

.video-content {
  display: flex;
  justify-content: center;
  align-items: center;

  padding: 40px;
  background: rgba(white, .1);
  box-shadow: 5px 5px 25px rgba(black, .5);

  position: fixed;
  z-index: 1000;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  width: $width;
  height: $height;
  
  iframe {
    width: 100%;
    height: 100%;
    position: relative;
    z-index: 2;
  }

  &__close-btn {
    position: absolute;
    top: 0;
    right: 0;
    padding: 10px 15px;
    font-size: 12px;
  }

  &__preload {
    position: absolute;
    width: 100%;
    height: 100%;
    padding: 40px;
    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      object-position: center;
    }
  }
}

@media (max-width: 800px) {
  $width: 90vw;
  $ratio: 16 / 9;
  $height: $width / $ratio;

  .video-content {
    width: $width;
    height: $height;
  }
}

@media (max-width: 550px) {
  .video-btn {
    position: absolute;
    z-index: 2;
    top: -60px;
    left: 20px;
  
    width: 50px;
  }
}

